[gd_scene load_steps=25 format=3 uid="uid://b7q846lgof32"]

[ext_resource type="Texture2D" uid="uid://bgtd4nywowrgp" path="res://mision5/Kruskal/images/glitch-ezgif.com-gif-to-sprite-converter.png" id="1_e8pja"]
[ext_resource type="Script" uid="uid://d32mq118w6tew" path="res://mision5/Kruskal/Script/text_edit.gd" id="2_5upok"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rj1i6"]
atlas = ExtResource("1_e8pja")
region = Rect2(0, 0, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_3anww"]
atlas = ExtResource("1_e8pja")
region = Rect2(0, 186, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_meajn"]
atlas = ExtResource("1_e8pja")
region = Rect2(0, 372, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjjyp"]
atlas = ExtResource("1_e8pja")
region = Rect2(0, 558, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpb3"]
atlas = ExtResource("1_e8pja")
region = Rect2(498, 0, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_d723d"]
atlas = ExtResource("1_e8pja")
region = Rect2(498, 186, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_chcqv"]
atlas = ExtResource("1_e8pja")
region = Rect2(498, 372, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx36e"]
atlas = ExtResource("1_e8pja")
region = Rect2(498, 558, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_506ss"]
atlas = ExtResource("1_e8pja")
region = Rect2(996, 0, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cj5m"]
atlas = ExtResource("1_e8pja")
region = Rect2(996, 186, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbmq2"]
atlas = ExtResource("1_e8pja")
region = Rect2(996, 372, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6jt8"]
atlas = ExtResource("1_e8pja")
region = Rect2(996, 558, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_o78ll"]
atlas = ExtResource("1_e8pja")
region = Rect2(1494, 0, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea6t8"]
atlas = ExtResource("1_e8pja")
region = Rect2(1494, 186, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ovm4"]
atlas = ExtResource("1_e8pja")
region = Rect2(1494, 372, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_61bc2"]
atlas = ExtResource("1_e8pja")
region = Rect2(1494, 558, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1664"]
atlas = ExtResource("1_e8pja")
region = Rect2(1992, 0, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0rjh"]
atlas = ExtResource("1_e8pja")
region = Rect2(1992, 186, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k0ud"]
atlas = ExtResource("1_e8pja")
region = Rect2(1992, 372, 498, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_dia4v"]
atlas = ExtResource("1_e8pja")
region = Rect2(1992, 558, 498, 186)

[sub_resource type="SpriteFrames" id="SpriteFrames_dc1gb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj1i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3anww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meajn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjjyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d723d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chcqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx36e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_506ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cj5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbmq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6jt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o78ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea6t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ovm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61bc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1664")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0rjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k0ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dia4v")
}],
"loop": false,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtxcn"]

[node name="Game over" type="Node2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(580.5, 329)
scale = Vector2(2.4479165, 3.5913975)
sprite_frames = SubResource("SpriteFrames_dc1gb")
animation = &"new_animation"

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 59.0
offset_right = 1107.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_mtxcn")
text = "Game Over...
"
script = ExtResource("2_5upok")

[node name="Restart" type="Button" parent="."]
offset_left = 442.0
offset_top = 300.0
offset_right = 691.0
offset_bottom = 370.0
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Exit" type="Button" parent="."]
offset_left = 532.0
offset_top = 409.0
offset_right = 611.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 40
text = "Exit
"

[connection signal="animation_finished" from="AnimatedSprite2D" to="TextEdit" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="Restart" to="TextEdit" method="_on_restart_pressed"]
[connection signal="pressed" from="Exit" to="TextEdit" method="_on_exit_pressed"]
